# rust_explor

./: .gitignore  Cargo.toml  README.md
00.helloworld/: display  display.rs  output  output.rs
01.primitives/: main  main.rs  slice  slice.rs  turple  turple.rs
02.custom_type/: enum  enum.rs  link  link.rs  static  static.rs  struct  struct.rs
03.variable/: change  change.rs
04.type_sys/: change  change.rs
05.type_change/: from  from.rs  tostring  tostring.rs  try_from  try_from.rs
06.func/: apply  apply.rs  closure  closure.rs  func  func.rs  higher  higher.rs
07.module/: mod  mod.rs  struct  struct.rs
08.generic/: fine  fine.rs
09.scope/: borrow  borrow.rs  move  move.rs  mutable  mutable.rs  power  power.rs  rall  rall.rs
examples/httpie/: Cargo.toml
examples/httpie/src/: main.rs
examples/queryer/: Cargo.toml
examples/queryer/examples/: covid.rs  dialect.rs
examples/queryer/src/: dialect.rs
examples/scrape_url/: Cargo.toml
examples/scrape_url/src/: main.rs
examples/thumbor/: Cargo.toml  abi.proto  build.rs
examples/thumbor/src/: main.rs
examples/thumbor/src/engine/: mod.rs  photon.rs
examples/thumbor/src/pb/: abi.rs  mod.rs
src/: main  main.rs
